--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon",
     "debug": "nodemon --inspect"
   },
+  "engines": {
+    "node": "11.13.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/siqueira-ec/apiasep.git"
